log
Fri, May  2, 2025 11:59:51 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  7:19:39 PM: 
 treemap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:32: error: 'Pair {aka struct Pair}' has no member named 'left'
             aux_pair = aux_pair->left;
                                ^~
treemap.c:80:32: error: 'Pair {aka struct Pair}' has no member named 'right'
             aux_pair = aux_pair->right;
                                ^~
252d50e
